--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# Dependencies
 node_modules
-.pnp
-.pnp.js
-
-# Local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Testing
-coverage
-
-# Turbo
-.turbo
-
-# Vercel
-.vercel
-
-# Build Outputs
-.next/
-out/
-build
-dist
-
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Misc
+.dist
+.eslintcache
+.env*
 .DS_Store
-*.pem
+coverage
+pnpm-lock.yaml
+.vscode
+.idea
+apps/**/dist
+packages/**/dist
+infra/docker/*.log
+.turbo
