--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "extension",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,22 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.16",
-    "@tanstack/react-query": "^5.90.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.16",
-    "zustand": "^5.0.8"
+    "webext-bridge": "^6.0.1"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^2.2.1",
     "@eslint/js": "^9.36.0",
-    "@types/node": "^24.9.1",
+    "@types/chrome": "^0.1.24",
+    "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
@@ -33,7 +26,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
