--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,17 +10,28 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.917.0",
+    "@aws-sdk/s3-request-presigner": "^3.917.0",
     "@prisma/client": "^6.18.0",
     "bullmq": "^5.61.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.11.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.10",
+    "openid-client": "^6.8.1",
+    "pdf-parse": "^2.4.5",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.2",
+    "ua-parser-js": "^2.0.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -29,6 +40,7 @@
     "@types/express": "^5.0.4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.1",
+    "@types/nodemailer": "^7.0.3",
     "tsx": "^4.20.6",
     "typescript": "5.9.2",
     "vitest": "^4.0.3"
