--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "webext-bridge": "^6.0.1"
+    "webext-bridge": "^6.0.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.2.1",
