--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,17 +14,22 @@
     "@aws-sdk/s3-request-presigner": "^3.917.0",
     "@prisma/client": "^6.18.0",
     "bullmq": "^5.61.2",
+    "chrono-node": "^2.9.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "fast-fuzzy": "^1.12.0",
+    "file-type": "^21.0.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.25",
     "mammoth": "^1.11.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "openid-client": "^6.8.1",
     "pdf-parse": "^2.4.5",
@@ -39,6 +44,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/nodemailer": "^7.0.3",
     "tsx": "^4.20.6",
