--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.16",
     "webext-bridge": "^6.0.1",
     "zustand": "^5.0.8"
   },
