--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,13 +27,17 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-table": "^8.21.2",
+    "@tanstack/react-virtual": "^3.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.548.0",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
